--- a/templates/_foot.html
+++ b/templates/_foot.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     Made in India with <span class="glyphicon glyphicon-heart"></span> by <a href="htp://github.com/thewhitetulip">@thewhitetulip</a>
-    {{ .Tasks }}
+    <!--{{ .Tasks }}-->
 </footer>
 
  <script src="/static/js/vue.js"></script>
