--- a/templates/_head.html
+++ b/templates/_head.html
@@ -41,7 +41,7 @@
 
 <body>
     <!-- The navigation bar-->
-    {{ .Tasks }}
+    <!--{{ .Tasks }}-->
     <div id = "noti" class='notification hidden '><span id="message"><p id="actlMsg">Hello world</p></span></div>
     <nav class="navbar navbar-default navbar-fixed-top mainHeader">
         <div class="container-fluid">
@@ -112,19 +112,12 @@
                                 </form>
                                 </span>
                             </li>
+                            {{ range .Categories }}
                             <li class="sidebar-item">
-                                <a href="/category/dummy"  class="active">
-                                    <span class="nav-item"> Dummy</span> <span class="badge pull-right">4</span></a>
+                                <a href="/category/{{ .Name }}">
+                                    <span class="nav-item">{{ .Name }}</span> <span class="badge pull-right">{{ .TaskCount }}</span></a>
                             </li>
-                            <li class="sidebar-item">
-                                <a href="/category/dummy"  class="active">
-                                    <span class="nav-item"> Dummy</span> <span class="badge pull-right">4</span></a>
-                            </li>
-                            <li class="sidebar-item">
-                                <a href="/category/dummy"  class="active">
-                                    <span class="nav-item"> Dummy</span> <span class="badge pull-right">4</span></a>
-                            </li>
-                            
+                            {{ end }}
                         </ul>
                     </li>
                 </ul>
@@ -143,11 +136,11 @@
                 <h4 class="modal-title" id="newNoteLabel"><span class="glyphicon glyphicon-pencil"></span>  New Task</h4>
             </div>
             <div class="modal-body">
-                <form enctype="multipart/form-data" action="/add/" method="POST">
+                <form action="/add/" method="POST">
                     <div class="form-group">
 
                         <input type="text" name="title" class="form-control" id="add-note-title" placeholder="Title" />
-                        <input class="hidden" name="CSRFToken" value="CSRFToken" />
+                        <input class="hidden" name="CSRFToken" value="{{ .CSRFToken }}" />
                     </div>
                     <div class="form-group">
 
@@ -167,8 +160,9 @@
                     Category:
                     <select name="category" class="dropdown">
                         <option>---</option>
-                        <option value="one" selected="true"> </option>
-                        <option value="two" > </option>
+                        {{ range .Categories }}
+                        <option value="{{ .Name }}" >{{ .Name }}</option>
+                        {{ end }}
                     </select>
                    
             </div>
